# ChangeLog for media-libs/libbluray
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Jan 2011; Nikoli <nikoli@lavabit.com> libbluray-9999.ebuild:
  update deps

*libbluray-0.0.1_pre20101214 (14 Dec 2010)

  14 Dec 2010; Nikoli <nikoli@lavabit.com>
  +libbluray-0.0.1_pre20101214.ebuild:
  add snapshot

  14 Dec 2010; Nikoli <nikoli@lavabit.com> libbluray-9999.ebuild,
  metadata.xml:
  fix java USE, src_install, add utils USE

*libbluray-9999 (09 Jul 2010)

  09 Jul 2010; Steve Dibb <beandog@gentoo.org> +libbluray-9999.ebuild,
  +metadata.xml:
  Initial commit; bug 293311
