@@ -1,0 +1,1 @@
+LIBBLURAY_CP="/usr/share/libbluray/lib/libbluray.jar"
