@@ -1,46 +1,64 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libbluray/libbluray-9999.ebuild,v 1.1 2010/07/17 02:55:14 beandog Exp $
+# $Header: $
 
 EAPI=2
 
-inherit autotools java-pkg-opt-2 git
+inherit autotools java-pkg-opt-2 flag-o-matic git
 
 EGIT_REPO_URI="git://git.videolan.org/libbluray.git"
 
 DESCRIPTION="Blu-ray playback libraries"
-HOMEPAGE="http://www.videolan.org/ http://git.videolan.org/?p=libbluray.git;a=summary"
+HOMEPAGE="http://www.videolan.org/developers/libbluray.html"
 
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS=""
-IUSE="aacs java static-libs utils"
+IUSE="aacs java static-libs utils xine"
 
 COMMON_DEPEND="
 	dev-libs/libxml2
-	java? ( virtual/jdk )
+	xine? ( media-libs/xine-lib )
 "
 RDEPEND="${COMMON_DEPEND}
 	aacs? ( media-video/aacskeys )
+	java? ( >=virtual/jre-1.6 )
 "
 DEPEND="${COMMON_DEPEND}
+	java? ( >=virtual/jdk-1.6 )
 	dev-util/pkgconfig
 "
 
 src_prepare() {
 	use java && export JDK_HOME="$(java-config -g JAVA_HOME)"
 	eautoreconf
+
+	java-pkg-opt-2_src_prepare
 }
 
 src_configure() {
 	local myconf=""
-	use java && myconf="--with-jdk=${JDK_HOME}"
+	if use java; then
+		export JAVACFLAGS="$(java-pkg_javac-args)"
+		append-cflags "$(java-pkg_get-jni-cflags)"
+		myconf="--with-jdk=${JDK_HOME}"
+	fi
 
 	econf \
+		$(use_enable java bdjava) \
 		$(use_enable static-libs static) \
 		$(use_enable utils static) \
 		$(use_enable utils examples) \
 		$myconf
+}
+
+src_compile() {
+	emake || die
+
+	if use xine; then
+		cd player_wrappers/xine || die
+		emake || die
+	fi
 }
 
 src_install() {
@@ -53,5 +71,19 @@ src_install() {
 		dobin clpi_dump index_dump mobj_dump mpls_dump sound_dump || die
 		cd .libs/
 		dobin bd_info bdsplice hdmv_test libbluray_test list_titles || die
+		if use java; then
+			dobin bdj_test || die
+		fi
+	fi
+
+	if use java; then
+		java-pkg_dojar "${S}/src/.libs/${PN}.jar"
+		newenvd "${FILESDIR}/envd" "90${PN}"
+	fi
+
+	if use xine; then
+		cd "${S}"/player_wrappers/xine || die
+		emake DESTDIR="${D}" install || die
+		newdoc HOWTO README.xine
 	fi
 }
