@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Feb 2011; Nikoli <nikoli@lavabit.com> +files/90libbluray,
+  libbluray-9999.ebuild:
+  fix java, add xine USE
+
   31 Jan 2011; Nikoli <nikoli@lavabit.com> libbluray-9999.ebuild:
   update deps
 
